obs-ffmpeg: Add frame drop controls to the ffmpeg source UI

--- a/plugins/obs-ffmpeg/data/locale/en-US.ini
+++ b/plugins/obs-ffmpeg/data/locale/en-US.ini
@@ -12,3 +12,11 @@ HardwareDecode="Use hardware decoding when available"
 Advanced="Advanced"
 AudioBufferSize="Audio Buffer Size (frames)"
 VideoBufferSize="Video Buffer Size (frames)"
+FrameDropping="Frame Dropping Level"
+DiscardNone="None"
+DiscardDefault="Default (Invalid Packets)"
+DiscardNonRef="Non-Reference Frames"
+DiscardBiDir="Bi-Directional Frames"
+DiscardNonIntra="Non-Intra Frames"
+DiscardNonKey="Non-Key Frames"
+DiscardAll="All Frames (Careful!)"
