win-dshow: Change avermedia encoder names

--- a/plugins/win-dshow/data/locale/en-US.ini
+++ b/plugins/win-dshow/data/locale/en-US.ini
@@ -29,5 +29,5 @@ Deactivate="Deactivate"
 
 # encoder text
 Bitrate="Bitrate"
-Encoder.C985="AVerMedia h264 Encoder (c985)"
-Encoder.C353="AVerMedia h264 Encoder (c353)"
+Encoder.C985="AVerMedia H.264 Encoder (c985)"
+Encoder.C353="AVerMedia H.264 Encoder"
