win-capture: Rename 'Monitor' to 'Display' capture
The name 'Monitor' is a bit inconsistent with what it's called by the
operating system.

--- a/plugins/win-capture/data/locale/en-US.ini
+++ b/plugins/win-capture/data/locale/en-US.ini
@@ -1,4 +1,4 @@
-MonitorCapture="Monitor Capture"
+MonitorCapture="Display Capture"
 WindowCapture="Window Capture"
 WindowCapture.Window="Window"
 WindowCapture.Priority="Window Match Priority"
@@ -8,7 +8,7 @@ WindowCapture.Priority.Exe="Executable Name"
 CaptureCursor="Capture Cursor"
 Compatibility="Multi-adapter Compatibility"
 AllowTransparency="Allow Transparency"
-Monitor="Monitor"
+Monitor="Display"
 PrimaryMonitor="Primary Monitor"
 GameCapture="Game Capture"
 GameCapture.AnyFullscreen="Capture any fullscreen application"
