obs-filters: Add mask/blend filter
This filter allows the ability to use a texture to modify the video
output of a source, the ability to:
- apply a color-based mask (dark = transparent, light = opaque)
- apply a mask based upon the alpha of an image
- blend an image via subtraction, addition, or multiplication

--- a/plugins/obs-filters/data/locale/en-US.ini
+++ b/plugins/obs-filters/data/locale/en-US.ini
@@ -1,2 +1,17 @@
+MaskFilter="Image Mask/Blend"
 AsyncDelayFilter="Video Delay (Async)"
 DelayMs="Delay (milliseconds)"
+Type="Type"
+MaskBlendType.MaskColor="Alpha Mask (Color Channel)"
+MaskBlendType.MaskAlpha="Alpha Mask (Alpha Channel)"
+MaskBlendType.BlendMultiply="Blend (Multiply)"
+MaskBlendType.BlendAddition="Blend (Addition)"
+MaskBlendType.BlendSubtraction="Blend (Subtraction)"
+Path="Path"
+Color="Color"
+Opacity="Opacity"
+Contrast="Contrast"
+Brightness="Brightness"
+Gamma="Gamma"
+BrowsePath.Images="All Image Files"
+BrowsePath.AllFiles="All Files"
