obs-filters: Add crop filter
Allows any source to be cropped, though note that this renders to
texture first, so for more optimal results, cropping values should
probably be put in to capture sources that can be cropped as they're
actually rendered by the source.

--- a/plugins/obs-filters/data/locale/en-US.ini
+++ b/plugins/obs-filters/data/locale/en-US.ini
@@ -1,5 +1,6 @@
 MaskFilter="Image Mask/Blend"
 AsyncDelayFilter="Video Delay (Async)"
+CropFilter="Crop"
 DelayMs="Delay (milliseconds)"
 Type="Type"
 MaskBlendType.MaskColor="Alpha Mask (Color Channel)"
@@ -15,3 +16,10 @@ Brightness="Brightness"
 Gamma="Gamma"
 BrowsePath.Images="All Image Files"
 BrowsePath.AllFiles="All Files"
+Crop.Left="Left"
+Crop.Right="Right"
+Crop.Top="Top"
+Crop.Bottom="Bottom"
+Crop.Width="Width"
+Crop.Height="Height"
+Crop.Relative="Relative"
