obs-filters: Add chroma key filter
This allows applying a mask based upon the chroma value (U/V) of a
specific color in YUV color space.  Commonly used to mask out
greenscreens and bluescreens in live video.

--- a/plugins/obs-filters/data/locale/en-US.ini
+++ b/plugins/obs-filters/data/locale/en-US.ini
@@ -2,6 +2,7 @@ ColorFilter="Color Correction"
 MaskFilter="Image Mask/Blend"
 AsyncDelayFilter="Video Delay (Async)"
 CropFilter="Crop"
+ChromaKeyFilter="Chroma Key"
 DelayMs="Delay (milliseconds)"
 Type="Type"
 MaskBlendType.MaskColor="Alpha Mask (Color Channel)"
@@ -17,6 +18,11 @@ Brightness="Brightness"
 Gamma="Gamma"
 BrowsePath.Images="All Image Files"
 BrowsePath.AllFiles="All Files"
+KeyColorType="Key Color Type"
+KeyColor="Key Color"
+Similarity="Similarity (1-1000)"
+Smoothness="Smoothness (1-1000)"
+ColorSpillReduction="Key Color Spill Reduction (1-1000)"
 Crop.Left="Left"
 Crop.Right="Right"
 Crop.Top="Top"
@@ -24,3 +30,7 @@ Crop.Bottom="Bottom"
 Crop.Width="Width"
 Crop.Height="Height"
 Crop.Relative="Relative"
+CustomColor="Custom Color"
+Green="Green"
+Blue="Blue"
+Magenta="Magenta"
