obs-filters: Add color key filter
Masks out a specific color range in RGB color space.  Commonly used with
solid image data or animated video rather than live video.

--- a/plugins/obs-filters/data/locale/en-US.ini
+++ b/plugins/obs-filters/data/locale/en-US.ini
@@ -3,6 +3,7 @@ MaskFilter="Image Mask/Blend"
 AsyncDelayFilter="Video Delay (Async)"
 CropFilter="Crop"
 ChromaKeyFilter="Chroma Key"
+ColorKeyFilter="Color Key"
 DelayMs="Delay (milliseconds)"
 Type="Type"
 MaskBlendType.MaskColor="Alpha Mask (Color Channel)"
@@ -31,6 +32,7 @@ Crop.Width="Width"
 Crop.Height="Height"
 Crop.Relative="Relative"
 CustomColor="Custom Color"
+Red="Red"
 Green="Green"
 Blue="Blue"
 Magenta="Magenta"
