UI: Add missing locale text
"Close" and "Interact"

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -10,6 +10,7 @@ Region="United States"
 OK="OK"
 Apply="Apply"
 Cancel="Cancel"
+Close="Close"
 Save="Save"
 Discard="Discard"
 Yes="Yes"
@@ -17,6 +18,7 @@ No="No"
 Add="Add"
 Remove="Remove"
 Rename="Rename"
+Interact="Interact"
 Filters="Filters"
 Properties="Properties"
 MoveUp="Move Up"
