--- a/plugins/obs-ffmpeg/data/locale/en-US.ini
+++ b/plugins/obs-ffmpeg/data/locale/en-US.ini
@@ -9,6 +9,7 @@ Input="Input"
 InputFormat="Input Format"
 ForceFormat="Force format conversion"
 HardwareDecode="Use hardware decoding when available"
+ClearOnMediaEnd="Clear media on stream end"
 Advanced="Advanced"
 AudioBufferSize="Audio Buffer Size (frames)"
 VideoBufferSize="Video Buffer Size (frames)"
