obs-ffmpeg: Clearer meaning for ClearMediaOnEnd

--- a/plugins/obs-ffmpeg/data/locale/en-US.ini
+++ b/plugins/obs-ffmpeg/data/locale/en-US.ini
@@ -9,7 +9,7 @@ Input="Input"
 InputFormat="Input Format"
 ForceFormat="Force format conversion"
 HardwareDecode="Use hardware decoding when available"
-ClearOnMediaEnd="Clear media on stream end"
+ClearOnMediaEnd="Hide source when playback ends"
 Advanced="Advanced"
 AudioBufferSize="Audio Buffer Size (frames)"
 VideoBufferSize="Video Buffer Size (frames)"
