UI: Add Format, Audio and Video ComboBoxes
Adds ComboBoxes for selecting format and audio/video
codecs. The ComboBoxes also show only valid codec
combinations for a particular container format.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -276,9 +276,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Use stream encoder)"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Common recording formats"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="All Files"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="File path or URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video Encoder (blank=default)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Container Format"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Audio"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Video"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Default Format"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Container Format Description"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Audio/Video Codec guessed from File path or URL"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Default Encoder"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Disable Encoder"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video Encoder"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Video Encoder Settings (if any)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Encoder (blank=default)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Encoder"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Audio Encoder Settings (if any)"
 
 # basic mode 'video' settings
