UI: Add context menu to preview
Includes the ability to disable the preview and general source context
menu options (add/remove/filters/properties/etc)

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -102,12 +102,18 @@ Basic.AuxDevice4="Mic/Aux 4"
 Basic.Scene="Scene"
 Basic.DisplayCapture="Display Capture"
 
+# display context menu
+Basic.Main.PreviewConextMenu.Enable="Enable Preview"
+
 # add scene dialog
 Basic.Main.AddSceneDlg.Title="Add Scene"
 Basic.Main.AddSceneDlg.Text="Please enter the name of the scene"
 
 # add scene suggested name
 Basic.Main.DefaultSceneName.Text="Scene %1"
+
+# preview window disabled
+Basic.Main.PreviewDisabled="Preview is currently disabled"
 
 # add source dialog
 Basic.SourceSelect="Create/Select Source"
