UI: Add fullscreen projector options
Add the ability to use a fullscreen projector for scenes, sources, and
the preview display.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -24,6 +24,7 @@ Properties="Properties"
 MoveUp="Move Up"
 MoveDown="Move Down"
 Settings="Settings"
+Display="Display"
 Name="Name"
 Exit="Exit"
 Mixer="Mixer"
@@ -31,6 +32,9 @@ Browse="Browse"
 Mono="Mono"
 Stereo="Stereo"
 DroppedFrames="Dropped Frames %1 (%2%)"
+PreviewProjector="Fullscreen Projector (Preview)"
+SceneProjector="Fullscreen Projector (Scene)"
+SourceProjector="Fullscreen Projector (Source)"
 
 # "name already exists" dialog box
 NameExists.Title="Name already exists"
