UI: Add editable list property to properties view
Implemented as a multi-selection QListWidget.  Individual values in the
list are saved to the settings in an obs_data_array_t item.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -135,6 +135,11 @@ Basic.PropertiesWindow.SelectFont="Select font"
 Basic.PropertiesWindow.ConfirmTitle="Settings Changed"
 Basic.PropertiesWindow.Confirm="There are unsaved changes.  Do you want to keep them?"
 Basic.PropertiesWindow.NoProperties="No properties available"
+Basic.PropertiesWindow.AddFiles="Add Files"
+Basic.PropertiesWindow.AddURL="Add Path/URL"
+Basic.PropertiesWindow.AddEditableListFiles="Add files to '%1'"
+Basic.PropertiesWindow.AddEditableListEntry="Add entry to '%1'"
+Basic.PropertiesWindow.EditEditableListEntry="Edit entry from '%1'"
 
 # interaction window
 Basic.InteractionWindow="Interacting with '%1'"
