win-dshow: Add option to allow vertical flip
I'm putting this option in due to the fact that there are legitimate
cases where a device may flip the output unexpectedly (such as the
Datapath VisionDVI-DL running in RGB video format), and that a user may
want to be able to view the source in a projector or source properties
without the image being inverted.

My original line of thinking was that they can just use a transform to
flip the image, but I felt this problem impacts rendering everywhere,
such as in the projector and in the source properties, so having it as
an option in the source itself feels like the best way to ensure that a
user can get it to render everywhere properly.

--- a/plugins/win-dshow/data/locale/en-US.ini
+++ b/plugins/win-dshow/data/locale/en-US.ini
@@ -26,6 +26,7 @@ Buffering.Enable="Enable"
 Buffering.Disable="Disable"
 Activate="Activate"
 Deactivate="Deactivate"
+FlipVertically="Flip Vertically"
 
 # encoder text
 Bitrate="Bitrate"
