UI: Add Push-to-talk/mute settings to audio settings

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -333,6 +333,10 @@ Basic.Settings.Audio.DesktopDevice2="Desktop Audio Device 2"
 Basic.Settings.Audio.AuxDevice="Mic/Auxiliary Audio Device"
 Basic.Settings.Audio.AuxDevice2="Mic/Auxiliary Audio Device 2"
 Basic.Settings.Audio.AuxDevice3="Mic/Auxiliary Audio Device 3"
+Basic.Settings.Audio.EnablePushToMute="Enable Push-to-mute"
+Basic.Settings.Audio.PushToMuteDelay="Push-to-mute delay"
+Basic.Settings.Audio.EnablePushToTalk="Enable Push-to-talk"
+Basic.Settings.Audio.PushToTalkDelay="Push-to-talk delay"
 
 # basic mode 'advanced' settings
 Basic.Settings.Advanced="Advanced"
@@ -397,6 +401,7 @@ Hotkeys.MouseButton="Mouse %1"
 # audio hotkeys
 Mute="Mute"
 Unmute="Unmute"
+Push-to-mute="Push-to-mute"
 Push-to-talk="Push-to-talk"
 
 # scene item hotkeys
