obs-filters: Add sharpen filter

--- a/plugins/obs-filters/data/locale/en-US.ini
+++ b/plugins/obs-filters/data/locale/en-US.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="Video Delay (Async)"
 CropFilter="Crop"
 ChromaKeyFilter="Chroma Key"
 ColorKeyFilter="Color Key"
+SharpnessFilter="Sharpen"
 DelayMs="Delay (milliseconds)"
 Type="Type"
 MaskBlendType.MaskColor="Alpha Mask (Color Channel)"
